Embedded first dashboard

--- a/Presentation/WebMVC/Views/Home/Index.cshtml
+++ b/Presentation/WebMVC/Views/Home/Index.cshtml
@@ -39,7 +39,7 @@
     <h2>Dashboard</h2>
     <!-- Embed Power BI iframe -->
     <div class="ratio ratio-16x9 mb-4">
-        <iframe src="https://app.powerbi.com/..." frameborder="0" allowFullScreen></iframe>
+        <iframe title="GetTarrifEscalationVsTradeDependenceData" width="600" height="373.5" src="https://app.powerbi.com/view?r=eyJrIjoiZTQ2ZWExMjQtNDAwMy00YTg2LTgzMjYtYjY0ZmMxMzcyZTU3IiwidCI6IjhjMjE4YWEwLWE5MGItNGE2YS1hZjk4LWE2ZTYzODg5MDJkNiIsImMiOjEwfQ%3D%3D" frameborder="0" allowFullScreen="true"></iframe>
     </div>
 
     <p>
