Added second endpoint in front-end

--- a/Presentation/WebMVC/Views/Shared/_Layout.cshtml
+++ b/Presentation/WebMVC/Views/Shared/_Layout.cshtml
@@ -37,16 +37,10 @@
                     <div class="position-sticky pt-3">
                         <ul class="nav flex-column">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="/">Dashboard</a>
+                            <a class="nav-link active" aria-current="page" a href="@Url.Action("TariffAndTrade", "Home")">Tariff And Trade Dashboard</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/Metrics/GDP">GDP</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/Metrics/Population">Population</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="/Metrics/Education">Education</a>
+                                <a class="nav-link active" aria-current="page" a href="@Url.Action("MadeOrReceivedDigitalPayment", "Home")">Made Or Received Digital Payment Dashboard</a>
                             </li>
                             <!-- Add more as needed -->
                         </ul>
