--- a/Presentation/WebMVC/Views/Shared/_Layout.cshtml
+++ b/Presentation/WebMVC/Views/Shared/_Layout.cshtml
@@ -19,13 +19,13 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
+                    @* <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item">
                                 <a class="nav-link" href="/Home/About">About</a>
                             </li>
                         </ul>
-                    </div>
+                    </div> *@
                 </div>
             </nav>
         </header>
@@ -37,10 +37,10 @@
                     <div class="position-sticky pt-3">
                         <ul class="nav flex-column">
                             <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" a href="@Url.Action("TariffAndTrade", "Home")">Tariff And Trade Dashboard</a>
+                            <a class="nav-link active" aria-current="page" a href="@Url.Action("TariffAndTrade", "Home")">Tariff And Trade</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" a href="@Url.Action("MadeOrReceivedDigitalPayment", "Home")">Made Or Received Digital Payment Dashboard</a>
+                                <a class="nav-link active" aria-current="page" a href="@Url.Action("MadeOrReceivedDigitalPayment", "Home")">Made Or Received Digital Payment</a>
                             </li>
                             <!-- Add more as needed -->
                         </ul>
@@ -55,7 +55,7 @@
 
         <footer class="footer mt-auto py-3 bg-light">
             <div class="container">
-                <span class="text-muted">© 2025 Your Team Name</span>
+                <span class="text-muted">© 2025 CCH</span>
             </div>
         </footer>
 
