--- a/Presentation/WebMVC/Views/Home/ShowMadeOrReceivedDigitalPaymentDashboard.cshtml
+++ b/Presentation/WebMVC/Views/Home/ShowMadeOrReceivedDigitalPaymentDashboard.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Made or Received Digital Payments in ASEAN Dashboard";
+    ViewData["Title"] = "Trend of Made or Received Digital Payments in ASEAN - Dashboard";
 }
 
 <div class="container py-5">
