--- a/Presentation/WebMVC/Views/Home/ShowTariffAndTradeDashboard.cshtml
+++ b/Presentation/WebMVC/Views/Home/ShowTariffAndTradeDashboard.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Tariff and Trade";
+    ViewData["Title"] = "Tariff and Trade Trend - Dashboard";
 }
 
 <div class="container py-5">
