--- a/Presentation/WebMVC/Views/Shared/_Layout.cshtml
+++ b/Presentation/WebMVC/Views/Shared/_Layout.cshtml
@@ -37,10 +37,19 @@
                     <div class="position-sticky pt-3">
                         <ul class="nav flex-column">
                             <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" a href="@Url.Action("TariffAndTrade", "Home")">Tariff And Trade</a>
+                            <a class="nav-link active" aria-current="page" a href="@Url.Action("ShowTariffAndTradeDashboard", "Home")">Tariff And Trade</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" a href="@Url.Action("MadeOrReceivedDigitalPayment", "Home")">Made Or Received Digital Payment</a>
+                            <a class="nav-link active" aria-current="page" a href="@Url.Action("ShowMadeOrReceivedDigitalPaymentDashboard", "Home")">Made Or Received Digital Payment</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" a href="@Url.Action("ShowElectricPowerConsumptionDashboard", "Home")">Electric Power Consumption</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" a href="@Url.Action("ShowFertilityRateDashboard", "Home")">Fertility Rate</a>
+                            </li>
+                            <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" a href="@Url.Action("ShowGiniIndexDashboard", "Home")">Gini Index</a>
                             </li>
                             <!-- Add more as needed -->
                         </ul>
